--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit SSD1306@^2.5.7
-
+	enjoyneering/AHT10@^1.1.0
+	adafruit/Adafruit AHTX0@^2.0.5
